--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,21 @@ async-timeout==4.0.2
 bcrypt==4.0.0
 billiard==3.6.4.0
 celery==5.2.7
+cfgv==3.3.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
+distlib==0.3.6
 dnspython==2.2.1
 email-validator==1.3.0
 fastapi==0.85.0
 fastapi-pagination==0.10.0
+filelock==3.8.0
 h11==0.13.0
 httptools==0.5.0
+identify==2.5.5
 idna==3.4
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
@@ -24,8 +28,11 @@ Jinja2==3.1.2
 kombu==5.2.4
 Mako==1.2.3
 MarkupSafe==2.1.1
+nodeenv==1.7.0
 packaging==21.3
 passlib==1.7.4
+platformdirs==2.5.2
+pre-commit==2.20.0
 prompt-toolkit==3.0.31
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
@@ -41,10 +48,12 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.20.4
+toml==0.10.2
 typing_extensions==4.3.0
 uvicorn==0.18.3
 uvloop==0.17.0
 vine==5.0.0
+virtualenv==20.16.5
 watchfiles==0.17.0
 wcwidth==0.2.5
 websockets==10.3
