--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anyio==3.6.1
 async-timeout==4.0.2
 bcrypt==4.0.0
 billiard==3.6.4.0
+black==22.8.0
 celery==5.2.7
 cfgv==3.3.1
 click==8.1.3
@@ -17,6 +18,7 @@ email-validator==1.3.0
 fastapi==0.85.0
 fastapi-pagination==0.10.0
 filelock==3.8.0
+flake8==5.0.4
 h11==0.13.0
 httptools==0.5.0
 identify==2.5.5
@@ -24,19 +26,26 @@ idna==3.4
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
 install==1.3.5
+isort==5.10.1
 Jinja2==3.1.2
 kombu==5.2.4
 Mako==1.2.3
 MarkupSafe==2.1.1
+mccabe==0.7.0
+mypy==0.971
+mypy-extensions==0.4.3
 nodeenv==1.7.0
 packaging==21.3
 passlib==1.7.4
+pathspec==0.10.1
 platformdirs==2.5.2
 pre-commit==2.20.0
 prompt-toolkit==3.0.31
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycodestyle==2.9.1
 pydantic==1.10.2
+pyflakes==2.5.0
 PyJWT==2.5.0
 pyparsing==3.0.9
 python-dotenv==0.21.0
@@ -49,6 +58,8 @@ sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.20.4
 toml==0.10.2
+tomli==2.0.1
+types-pytz==2022.2.1.0
 typing_extensions==4.3.0
 uvicorn==0.18.3
 uvloop==0.17.0
